--- a/site.html
+++ b/site.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>My Projects by farseenabdulsalam</title>
+    <title>Messaging Service</title>
   </head>
 
   <body>
@@ -20,6 +20,7 @@
         <header>
           <h1>Messaging Service</h1>
           <h2>- Will Be Online on 18 Jan Monday 2016</h2>
+          <h2> Thanks for visiting my dear best friend. </h2>
         </header>
           <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
