--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adventures</title>
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/list_page.css">
   </head>
@@ -28,14 +28,13 @@
 
     <main>
     
+<article>
+  <h1> About </h1>
+  <div><p>Minimalist.</p>
 
-<section class="list-page-entry">
-	<a href="/adventures/android/" class="link-to-article"><h2 class="title"> Hello World </h2></a>
-  <div class="date">25 Dec 17</div>
-  <p class="summary">Hello World!</p>
-  
-</section>
-
+<p>Bare metal enthusiast.</p>
+</div>
+</article>
 
     </main>
     <footer>
